exports[`test Child node 1`] = `
<RaisedButton
  animateOnTap={true}
  content={
    <div
      className="pe-fab__content">
      <Icon
        svg={
          Object {
            "content": <div
              dangerouslySetInnerHTML={
                  Object {
                      "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M22 5.72l-4.6-3.86-1.29 1.53 4.6 3.86L22 5.72zM7.88 3.39L6.6 1.86 2 5.71l1.29 1.53 4.59-3.85zM12.5 8H11v6l4.75 2.85.75-1.23-4-2.37V8zM12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9c4.97 0 9-4.03 9-9s-4.03-9-9-9zm0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z\"/></svg>",
                    }
              } />,
          }
        } />
    </div>
  }
  ink={true}
  parentClassName="pe-fab  "
  ripple={
    Object {
      "center": true,
      "opacityDecayVelocity": 0.24,
    }
  }
  shadow={
    Object {
      "increase": 5,
    }
  }
  wash={true} />
`;

exports[`test Dark tone class + light tone 1`] = `
<div
  style={
    Object {
      "background": "#fff",
      "padding": "10px",
    }
  }>
  <FAB
    icon={
      Object {
        "svg": <div
          dangerouslySetInnerHTML={
              Object {
                  "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M22 5.72l-4.6-3.86-1.29 1.53 4.6 3.86L22 5.72zM7.88 3.39L6.6 1.86 2 5.71l1.29 1.53 4.59-3.85zM12.5 8H11v6l4.75 2.85.75-1.23-4-2.37V8zM12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9c4.97 0 9-4.03 9-9s-4.03-9-9-9zm0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z\"/></svg>",
                }
          } />,
      }
    }
    tint="light" />
  <FAB
    className="tests-fab-themed-fab"
    icon={
      Object {
        "svg": <div
          dangerouslySetInnerHTML={
              Object {
                  "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M22 5.72l-4.6-3.86-1.29 1.53 4.6 3.86L22 5.72zM7.88 3.39L6.6 1.86 2 5.71l1.29 1.53 4.59-3.85zM12.5 8H11v6l4.75 2.85.75-1.23-4-2.37V8zM12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9c4.97 0 9-4.03 9-9s-4.03-9-9-9zm0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z\"/></svg>",
                }
          } />,
      }
    }
    tint="light" />
</div>
`;

exports[`test Dark tone class + light tone class 1`] = `
<div
  className="pe-light-tone"
  style={
    Object {
      "background": "#fff",
      "padding": "10px",
    }
  }>
  <FAB
    icon={
      Object {
        "svg": <div
          dangerouslySetInnerHTML={
              Object {
                  "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M22 5.72l-4.6-3.86-1.29 1.53 4.6 3.86L22 5.72zM7.88 3.39L6.6 1.86 2 5.71l1.29 1.53 4.59-3.85zM12.5 8H11v6l4.75 2.85.75-1.23-4-2.37V8zM12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9c4.97 0 9-4.03 9-9s-4.03-9-9-9zm0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z\"/></svg>",
                }
          } />,
      }
    } />
  <FAB
    className="tests-fab-themed-fab"
    icon={
      Object {
        "svg": <div
          dangerouslySetInnerHTML={
              Object {
                  "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M22 5.72l-4.6-3.86-1.29 1.53 4.6 3.86L22 5.72zM7.88 3.39L6.6 1.86 2 5.71l1.29 1.53 4.59-3.85zM12.5 8H11v6l4.75 2.85.75-1.23-4-2.37V8zM12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9c4.97 0 9-4.03 9-9s-4.03-9-9-9zm0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z\"/></svg>",
                }
          } />,
      }
    } />
</div>
`;

exports[`test No options 1`] = `
<RaisedButton
  animateOnTap={true}
  content={
    <div
      className="pe-fab__content" />
  }
  ink={true}
  parentClassName="pe-fab  "
  ripple={
    Object {
      "center": true,
      "opacityDecayVelocity": 0.24,
    }
  }
  shadow={
    Object {
      "increase": 5,
    }
  }
  wash={true} />
`;

exports[`test Option: class 1`] = `
<RaisedButton
  animateOnTap={true}
  className="class-x"
  content={
    <div
      className="pe-fab__content" />
  }
  ink={true}
  parentClassName="pe-fab  class-x"
  ripple={
    Object {
      "center": true,
      "opacityDecayVelocity": 0.24,
    }
  }
  shadow={
    Object {
      "increase": 5,
    }
  }
  wash={true} />
`;

exports[`test Option: className 1`] = `
<RaisedButton
  animateOnTap={true}
  className="className-x"
  content={
    <div
      className="pe-fab__content" />
  }
  ink={true}
  parentClassName="pe-fab  className-x"
  ripple={
    Object {
      "center": true,
      "opacityDecayVelocity": 0.24,
    }
  }
  shadow={
    Object {
      "increase": 5,
    }
  }
  wash={true} />
`;

exports[`test Option: content 1`] = `
<RaisedButton
  animateOnTap={true}
  content={
    <Icon
      svg={
        Object {
          "content": <div
            dangerouslySetInnerHTML={
                Object {
                    "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M22 5.72l-4.6-3.86-1.29 1.53 4.6 3.86L22 5.72zM7.88 3.39L6.6 1.86 2 5.71l1.29 1.53 4.59-3.85zM12.5 8H11v6l4.75 2.85.75-1.23-4-2.37V8zM12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9c4.97 0 9-4.03 9-9s-4.03-9-9-9zm0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z\"/></svg>",
                  }
            } />,
        }
      } />
  }
  ink={true}
  parentClassName="pe-fab  "
  ripple={
    Object {
      "center": true,
      "opacityDecayVelocity": 0.24,
    }
  }
  shadow={
    Object {
      "increase": 5,
    }
  }
  wash={true} />
`;

exports[`test Option: element 1`] = `
<RaisedButton
  animateOnTap={true}
  content={
    <div
      className="pe-fab__content" />
  }
  element="a"
  ink={true}
  parentClassName="pe-fab  "
  ripple={
    Object {
      "center": true,
      "opacityDecayVelocity": 0.24,
    }
  }
  shadow={
    Object {
      "increase": 5,
    }
  }
  wash={true} />
`;

exports[`test Option: icon -- dark tone class 1`] = `
<RaisedButton
  animateOnTap={true}
  content={
    <div
      className="pe-fab__content">
      <Icon
        svg={
          Object {
            "content": <div
              dangerouslySetInnerHTML={
                  Object {
                      "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M22 5.72l-4.6-3.86-1.29 1.53 4.6 3.86L22 5.72zM7.88 3.39L6.6 1.86 2 5.71l1.29 1.53 4.59-3.85zM12.5 8H11v6l4.75 2.85.75-1.23-4-2.37V8zM12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9c4.97 0 9-4.03 9-9s-4.03-9-9-9zm0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z\"/></svg>",
                    }
              } />,
          }
        } />
    </div>
  }
  icon={
    Object {
      "svg": Object {
        "content": <div
          dangerouslySetInnerHTML={
                Object {
                      "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M22 5.72l-4.6-3.86-1.29 1.53 4.6 3.86L22 5.72zM7.88 3.39L6.6 1.86 2 5.71l1.29 1.53 4.59-3.85zM12.5 8H11v6l4.75 2.85.75-1.23-4-2.37V8zM12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9c4.97 0 9-4.03 9-9s-4.03-9-9-9zm0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z\"/></svg>",
                    }
          } />,
      },
    }
  }
  ink={true}
  parentClassName="pe-fab  "
  ripple={
    Object {
      "center": true,
      "opacityDecayVelocity": 0.24,
    }
  }
  shadow={
    Object {
      "increase": 5,
    }
  }
  wash={true} />
`;

exports[`test Option: icon 1`] = `
<RaisedButton
  animateOnTap={true}
  content={
    <div
      className="pe-fab__content">
      <Icon
        svg={
          Object {
            "content": <div
              dangerouslySetInnerHTML={
                  Object {
                      "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M22 5.72l-4.6-3.86-1.29 1.53 4.6 3.86L22 5.72zM7.88 3.39L6.6 1.86 2 5.71l1.29 1.53 4.59-3.85zM12.5 8H11v6l4.75 2.85.75-1.23-4-2.37V8zM12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9c4.97 0 9-4.03 9-9s-4.03-9-9-9zm0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z\"/></svg>",
                    }
              } />,
          }
        } />
    </div>
  }
  icon={
    Object {
      "svg": Object {
        "content": <div
          dangerouslySetInnerHTML={
                Object {
                      "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M22 5.72l-4.6-3.86-1.29 1.53 4.6 3.86L22 5.72zM7.88 3.39L6.6 1.86 2 5.71l1.29 1.53 4.59-3.85zM12.5 8H11v6l4.75 2.85.75-1.23-4-2.37V8zM12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9c4.97 0 9-4.03 9-9s-4.03-9-9-9zm0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z\"/></svg>",
                    }
          } />,
      },
    }
  }
  ink={true}
  parentClassName="pe-fab  "
  ripple={
    Object {
      "center": true,
      "opacityDecayVelocity": 0.24,
    }
  }
  shadow={
    Object {
      "increase": 5,
    }
  }
  wash={true} />
`;

exports[`test Option: icon as attribute (JSX) 1`] = `
<FAB
  icon={
    Object {
      "svg": <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg">
        <path
            d="M22 5.72l-4.6-3.86-1.29 1.53 4.6 3.86L22 5.72zM7.88 3.39L6.6 1.86 2 5.71l1.29 1.53 4.59-3.85zM12.5 8H11v6l4.75 2.85.75-1.23-4-2.37V8zM12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9c4.97 0 9-4.03 9-9s-4.03-9-9-9zm0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z" />
    </svg>,
    }
  }
  mini={true} />
`;

exports[`test Option: icon as component (JSX) 1`] = `
<FAB
  mini={true}>
  <Icon>
    <SVG>
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg">
        <path
          d="M22 5.72l-4.6-3.86-1.29 1.53 4.6 3.86L22 5.72zM7.88 3.39L6.6 1.86 2 5.71l1.29 1.53 4.59-3.85zM12.5 8H11v6l4.75 2.85.75-1.23-4-2.37V8zM12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9c4.97 0 9-4.03 9-9s-4.03-9-9-9zm0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z" />
      </svg>
    </SVG>
  </Icon>
</FAB>
`;

exports[`test Option: id 1`] = `
<RaisedButton
  animateOnTap={true}
  content={
    <div
      className="pe-fab__content" />
  }
  id="id-x"
  ink={true}
  parentClassName="pe-fab  "
  ripple={
    Object {
      "center": true,
      "opacityDecayVelocity": 0.24,
    }
  }
  shadow={
    Object {
      "increase": 5,
    }
  }
  wash={true} />
`;

exports[`test Option: mini 1`] = `
<RaisedButton
  animateOnTap={true}
  content={
    <div
      className="pe-fab__content">
      <Icon
        svg={
          Object {
            "content": <div
              dangerouslySetInnerHTML={
                  Object {
                      "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M22 5.72l-4.6-3.86-1.29 1.53 4.6 3.86L22 5.72zM7.88 3.39L6.6 1.86 2 5.71l1.29 1.53 4.59-3.85zM12.5 8H11v6l4.75 2.85.75-1.23-4-2.37V8zM12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9c4.97 0 9-4.03 9-9s-4.03-9-9-9zm0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z\"/></svg>",
                    }
              } />,
          }
        } />
    </div>
  }
  icon={
    Object {
      "svg": Object {
        "content": <div
          dangerouslySetInnerHTML={
                Object {
                      "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M22 5.72l-4.6-3.86-1.29 1.53 4.6 3.86L22 5.72zM7.88 3.39L6.6 1.86 2 5.71l1.29 1.53 4.59-3.85zM12.5 8H11v6l4.75 2.85.75-1.23-4-2.37V8zM12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9c4.97 0 9-4.03 9-9s-4.03-9-9-9zm0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z\"/></svg>",
                    }
          } />,
      },
    }
  }
  ink={true}
  mini={true}
  parentClassName="pe-fab pe-fab--mini "
  ripple={
    Object {
      "center": true,
      "opacityDecayVelocity": 0.24,
    }
  }
  shadow={
    Object {
      "increase": 5,
    }
  }
  wash={true} />
`;

exports[`test Option: style (JSX) 1`] = `
<FAB
  icon={
    Object {
      "svg": <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg">
        <path
            d="M22 5.72l-4.6-3.86-1.29 1.53 4.6 3.86L22 5.72zM7.88 3.39L6.6 1.86 2 5.71l1.29 1.53 4.59-3.85zM12.5 8H11v6l4.75 2.85.75-1.23-4-2.37V8zM12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9c4.97 0 9-4.03 9-9s-4.03-9-9-9zm0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z" />
    </svg>,
    }
  }
  style={
    Object {
      "backgroundColor": "#fff",
      "color": "#ef6c00",
    }
  } />
`;

exports[`test Option: style (colors) 1`] = `
<RaisedButton
  animateOnTap={true}
  content={
    <div
      className="pe-fab__content">
      <Icon
        svg={
          Object {
            "content": <div
              dangerouslySetInnerHTML={
                  Object {
                      "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M22 5.72l-4.6-3.86-1.29 1.53 4.6 3.86L22 5.72zM7.88 3.39L6.6 1.86 2 5.71l1.29 1.53 4.59-3.85zM12.5 8H11v6l4.75 2.85.75-1.23-4-2.37V8zM12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9c4.97 0 9-4.03 9-9s-4.03-9-9-9zm0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z\"/></svg>",
                    }
              } />,
          }
        } />
    </div>
  }
  icon={
    Object {
      "svg": Object {
        "content": <div
          dangerouslySetInnerHTML={
                Object {
                      "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M22 5.72l-4.6-3.86-1.29 1.53 4.6 3.86L22 5.72zM7.88 3.39L6.6 1.86 2 5.71l1.29 1.53 4.59-3.85zM12.5 8H11v6l4.75 2.85.75-1.23-4-2.37V8zM12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9c4.97 0 9-4.03 9-9s-4.03-9-9-9zm0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z\"/></svg>",
                    }
          } />,
      },
    }
  }
  ink={true}
  parentClassName="pe-fab  "
  ripple={
    Object {
      "center": true,
      "opacityDecayVelocity": 0.24,
    }
  }
  shadow={
    Object {
      "increase": 5,
    }
  }
  style={
    Object {
      "backgroundColor": "#4E342E",
      "color": "#FFCCBC",
    }
  }
  wash={true} />
`;

exports[`test Option: tabindex 1`] = `
<RaisedButton
  animateOnTap={true}
  content={
    <div
      className="pe-fab__content" />
  }
  ink={true}
  parentClassName="pe-fab  "
  ripple={
    Object {
      "center": true,
      "opacityDecayVelocity": 0.24,
    }
  }
  shadow={
    Object {
      "increase": 5,
    }
  }
  tabIndex={3}
  wash={true} />
`;

exports[`test Option: z (0) 1`] = `
<RaisedButton
  animateOnTap={true}
  content={
    <div
      className="pe-fab__content">
      <Icon
        svg={
          Object {
            "content": <div
              dangerouslySetInnerHTML={
                  Object {
                      "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M22 5.72l-4.6-3.86-1.29 1.53 4.6 3.86L22 5.72zM7.88 3.39L6.6 1.86 2 5.71l1.29 1.53 4.59-3.85zM12.5 8H11v6l4.75 2.85.75-1.23-4-2.37V8zM12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9c4.97 0 9-4.03 9-9s-4.03-9-9-9zm0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z\"/></svg>",
                    }
              } />,
          }
        } />
    </div>
  }
  icon={
    Object {
      "svg": Object {
        "content": <div
          dangerouslySetInnerHTML={
                Object {
                      "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M22 5.72l-4.6-3.86-1.29 1.53 4.6 3.86L22 5.72zM7.88 3.39L6.6 1.86 2 5.71l1.29 1.53 4.59-3.85zM12.5 8H11v6l4.75 2.85.75-1.23-4-2.37V8zM12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9c4.97 0 9-4.03 9-9s-4.03-9-9-9zm0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z\"/></svg>",
                    }
          } />,
      },
    }
  }
  ink={true}
  parentClassName="pe-fab  "
  ripple={
    Object {
      "center": true,
      "opacityDecayVelocity": 0.24,
    }
  }
  shadow={
    Object {
      "increase": 5,
    }
  }
  wash={true}
  z={0} />
`;

exports[`test Option: z (5) (JSX) 1`] = `
<FAB
  icon={
    Object {
      "svg": <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg">
        <path
            d="M22 5.72l-4.6-3.86-1.29 1.53 4.6 3.86L22 5.72zM7.88 3.39L6.6 1.86 2 5.71l1.29 1.53 4.59-3.85zM12.5 8H11v6l4.75 2.85.75-1.23-4-2.37V8zM12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9c4.97 0 9-4.03 9-9s-4.03-9-9-9zm0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z" />
    </svg>,
    }
  }
  mini={true}
  z={5} />
`;

exports[`test Option: z (5) 1`] = `
<RaisedButton
  animateOnTap={true}
  content={
    <div
      className="pe-fab__content">
      <Icon
        svg={
          Object {
            "content": <div
              dangerouslySetInnerHTML={
                  Object {
                      "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M22 5.72l-4.6-3.86-1.29 1.53 4.6 3.86L22 5.72zM7.88 3.39L6.6 1.86 2 5.71l1.29 1.53 4.59-3.85zM12.5 8H11v6l4.75 2.85.75-1.23-4-2.37V8zM12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9c4.97 0 9-4.03 9-9s-4.03-9-9-9zm0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z\"/></svg>",
                    }
              } />,
          }
        } />
    </div>
  }
  icon={
    Object {
      "svg": Object {
        "content": <div
          dangerouslySetInnerHTML={
                Object {
                      "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M22 5.72l-4.6-3.86-1.29 1.53 4.6 3.86L22 5.72zM7.88 3.39L6.6 1.86 2 5.71l1.29 1.53 4.59-3.85zM12.5 8H11v6l4.75 2.85.75-1.23-4-2.37V8zM12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9c4.97 0 9-4.03 9-9s-4.03-9-9-9zm0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z\"/></svg>",
                    }
          } />,
      },
    }
  }
  ink={true}
  parentClassName="pe-fab  "
  ripple={
    Object {
      "center": true,
      "opacityDecayVelocity": 0.24,
    }
  }
  shadow={
    Object {
      "increase": 5,
    }
  }
  wash={true}
  z={5} />
`;

exports[`test Themed FAB (colors) 1`] = `
<RaisedButton
  animateOnTap={true}
  className="tests-fab-themed-fab"
  content={
    <div
      className="pe-fab__content">
      <Icon
        svg={
          Object {
            "content": <div
              dangerouslySetInnerHTML={
                  Object {
                      "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M22 5.72l-4.6-3.86-1.29 1.53 4.6 3.86L22 5.72zM7.88 3.39L6.6 1.86 2 5.71l1.29 1.53 4.59-3.85zM12.5 8H11v6l4.75 2.85.75-1.23-4-2.37V8zM12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9c4.97 0 9-4.03 9-9s-4.03-9-9-9zm0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z\"/></svg>",
                    }
              } />,
          }
        } />
    </div>
  }
  icon={
    Object {
      "svg": Object {
        "content": <div
          dangerouslySetInnerHTML={
                Object {
                      "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M22 5.72l-4.6-3.86-1.29 1.53 4.6 3.86L22 5.72zM7.88 3.39L6.6 1.86 2 5.71l1.29 1.53 4.59-3.85zM12.5 8H11v6l4.75 2.85.75-1.23-4-2.37V8zM12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9c4.97 0 9-4.03 9-9s-4.03-9-9-9zm0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z\"/></svg>",
                    }
          } />,
      },
    }
  }
  ink={true}
  parentClassName="pe-fab  tests-fab-themed-fab"
  ripple={
    Object {
      "center": true,
      "opacityDecayVelocity": 0.24,
    }
  }
  shadow={
    Object {
      "increase": 5,
    }
  }
  wash={true} />
`;

exports[`test Themed FAB -- dark tone class 1`] = `
<RaisedButton
  animateOnTap={true}
  className="tests-fab-themed-fab"
  content={
    <div
      className="pe-fab__content">
      <Icon
        svg={
          Object {
            "content": <div
              dangerouslySetInnerHTML={
                  Object {
                      "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M22 5.72l-4.6-3.86-1.29 1.53 4.6 3.86L22 5.72zM7.88 3.39L6.6 1.86 2 5.71l1.29 1.53 4.59-3.85zM12.5 8H11v6l4.75 2.85.75-1.23-4-2.37V8zM12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9c4.97 0 9-4.03 9-9s-4.03-9-9-9zm0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z\"/></svg>",
                    }
              } />,
          }
        } />
    </div>
  }
  icon={
    Object {
      "svg": Object {
        "content": <div
          dangerouslySetInnerHTML={
                Object {
                      "__html": "<svg width=\"24\" height=\"24\" viewBox=\"0 0 24 24\"><path d=\"M22 5.72l-4.6-3.86-1.29 1.53 4.6 3.86L22 5.72zM7.88 3.39L6.6 1.86 2 5.71l1.29 1.53 4.59-3.85zM12.5 8H11v6l4.75 2.85.75-1.23-4-2.37V8zM12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9c4.97 0 9-4.03 9-9s-4.03-9-9-9zm0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z\"/></svg>",
                    }
          } />,
      },
    }
  }
  ink={true}
  parentClassName="pe-fab  tests-fab-themed-fab"
  ripple={
    Object {
      "center": true,
      "opacityDecayVelocity": 0.24,
    }
  }
  shadow={
    Object {
      "increase": 5,
    }
  }
  wash={true} />
`;

exports[`test With router (JSX) 1`] = `
<Route
  render={[Function]} />
`;

exports[`test With router 1`] = `
<Route
  render={[Function]} />
`;
